Query pill text alignment IE bug (#3313)

--- a/investigate-events/app/styles/investigate-events/components/_investigate-query-container.scss
+++ b/investigate-events/app/styles/investigate-events/components/_investigate-query-container.scss
@@ -250,6 +250,10 @@
       flex-grow: 100;
       input {
         width: 100%;
+        @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+          /* IE10+ CSS styles go here */
+          height: 100%;
+        }
       }
     }
     > div.is-populated {
